# F1-Live-Dashboard

./: .gitignore  DEVELOPMENT.md  INSTALLATION_FIX.md  MANIFEST.in  README.md  f1_data.db  pyproject.toml  requirements.txt  setup.py  test_installation.py
cache/: fastf1_http_cache.sqlite
f1_dash/: __init__.py  cache_manager.py  database_manager.py  main.py
fastf1_cache/2025/: season_schedule.ff1pkl
fastf1_cache/2025/2025-09-07_Italian_Grand_Prix/2025-09-05_Practice_1/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
fastf1_cache/2025/2025-09-07_Italian_Grand_Prix/2025-09-06_Practice_3/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
fastf1_cache/2025/2025-09-07_Italian_Grand_Prix/2025-09-06_Qualifying/: driver_info.ff1pkl
fastf1_cache/2025/2025-09-21_Azerbaijan_Grand_Prix/2025-09-19_Practice_1/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
fastf1_cache/2025/2025-09-21_Azerbaijan_Grand_Prix/2025-09-19_Practice_2/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
fastf1_cache/2025/2025-09-21_Azerbaijan_Grand_Prix/2025-09-20_Practice_3/: _extended_timing_data.ff1pkl  (+6 more)
