[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-dash"
description = "An enhanced F1 Live Position Dashboard with telemetry data"
readme = "README.md"
authors = [
    {name = "suriya56", email = "suriya56@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastf1>=3.0.0",
    "textual>=0.40.0",
    "pandas>=1.5.0",
    "rich>=13.0.0",
    "matplotlib>=3.5.0",
    "aioredis<2.0.0",
    "redis>=4.0.0",
]
version = "0.2.3"

[project.urls]
Homepage = "https://github.com/suriya56/F1-Live-Dashboard"
Repository = "https://github.com/suriya56/F1-Live-Dashboard"
"Bug Tracker" = "https://github.com/suriya56/F1-Live-Dashboard/issues"

[project.scripts]
f1-dash = "f1_dash.main:main"

[tool.setuptools]
packages = ["f1_dash"]
